# vulkan_sample

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/tradesense/myapplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: triangle_vert.spv
app/src/main/cpp/: CMakeLists.txt  TemplateRender.h  VulkanAppBridge.cpp  VulkanInstance.h  VulkanInstanceAndroid.cpp  VulkanInstanceAndroid.h  VulkanTemplateAndroid.cpp  main.cpp
app/src/main/cpp/vulkan/: VDeleter.h  pipeline.cpp  pipeline.h  vulkan_validation.h
app/src/main/java/com/tradesense/myapplication/: FirstFragment.kt  MainActivity.kt  SecondFragment.kt
app/src/main/java/vk/: VulkanAppBridge.kt  VulkanSurfaceView.kt  VulkanTemplate.kt  VulkanView.kt
app/src/main/res/layout/: fragment_first.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/shaders/: compile.sh  triangle.vert
app/src/test/java/com/tradesense/myapplication/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
